feat(auth): integrate Auth0 JWT authentication and App.Auth shared library

--- a/src/App.Realtime/App.Realtime.csproj
+++ b/src/App.Realtime/App.Realtime.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\App.Application\App.Application.csproj" />
     <ProjectReference Include="..\..\shared\Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\App.Auth\App.Auth.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
